--- a/Text transform.html
+++ b/Text transform.html
@@ -7,6 +7,7 @@
     <style>
         h1{
             text-transform: uppercase;
+            color: aqua;
         }
         p{
             text-transform:capitalize;
